--- a/cmd/QR_Web/static/index.html
+++ b/cmd/QR_Web/static/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5; URL=http://localhost:8142/index.html">
     <title>QR-COde</title>
 </head>
 <body>
-    <h2>this</h2>
+    <img src="../pic/qr_code.jpg" alt="QR-Code" width="256" height="256">
 </body>
 </html>
